// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileManager utils > if getFileSource is returning code with exports and exports as 1`] = `
"import type Dog from './Dog.ts'
import type { Pets, Lily } from './Pets.ts'

export const test = 2
type Test = Pets | Lily | Dog
"
`;

exports[`FileManager utils > if getFileSource is returning code with exports and exports as 2`] = `
"export type * as Dog from './Dog'
export type { Pets, Lily } from './Pets'
"
`;

exports[`FileManager utils > if getFileSource is returning code with imports 1`] = `
"import type { Pets } from './Pets.ts'

export type Pet = Pets
"
`;

exports[`FileManager utils > if getFileSource is returning code with imports 2`] = `
"import client from './Pets.ts'
import React from './React.ts'
import type { Pets, Cat } from './Pets.ts'

export type Pet = Pets | Cat
const test = [client, React]
"
`;

exports[`FileManager utils > if getFileSource is returning code with imports 3`] = `
"import client from './Pets.ts'
import React from './React.ts'
import type { Pets, Cat } from './Pets.ts'

export type Pet = Pets | Cat
const test = [client, React]
"
`;

exports[`FileManager utils > if getFileSource is returning code with imports and default import 1`] = `
"import type Pets from './Pets.ts'

export type Pet = Pets
"
`;
